objects/DOZISF__Complete_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DOZISF__Account_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__Account_Query_1__c</fullName>
        <label>Account Query 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Account_Query_2__c</fullName>
        <label>Account Query 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Query_1__c</fullName>
        <label>Contact Query 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Query_2__c</fullName>
        <label>Contact Query 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead_Query_1__c</fullName>
        <label>Lead Query 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead_Query_2__c</fullName>
        <label>Lead Query 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Complete Setting</label>
</CustomObject>